更新萌体中文

--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -723,111 +723,66 @@
   "multiplayer.disconnect.generic": "连接断掉了喵~",
   "multiplayer.disconnect.idling": "你发呆的时间太长了喵！",
   "multiplayer.disconnect.illegal_characters": "聊天里有奇怪的字符喵~",
-  "multiplayer.disconnect.incompatible": "客户端不兼容喵！要用%s 喵~",
-  "multiplayer.disconnect.invalid_entity_attacked": "想打无效的实体喵~",
-  "multiplayer.disconnect.invalid_packet": "服务器发了一个无效的数据包喵~",
-  "multiplayer.disconnect.invalid_player_data": "玩家数据不对喵~",
-  "multiplayer.disconnect.invalid_player_movement": "收到了包含非法玩家移动的数据包喵~",
-  "multiplayer.disconnect.invalid_public_key_signature": "无效的个人信息公钥签名喵~\n试试重启游戏喵~",
-  "multiplayer.disconnect.invalid_public_key_signature.new": "无效的个人信息公钥签名喵~\n试试重启游戏喵~",
-  "multiplayer.disconnect.invalid_vehicle_movement": "收到了包含非法载具移动的数据包喵~",
-  "multiplayer.disconnect.ip_banned": "你的IP地址被这个服务器封了喵~",
-  "multiplayer.disconnect.kicked": "被管理员踢出游戏了喵~",
-  "multiplayer.disconnect.missing_tags": "从服务器收到了不完整的标签集喵~\n联系一下服务器管理员喵~",
-  "multiplayer.disconnect.name_taken": "这个名字被别人用了喵~",
-  "multiplayer.disconnect.not_whitelisted": "你不在这个服务器的白名单里喵！",
-  "multiplayer.disconnect.out_of_order_chat": "收到了乱七八糟的聊天数据包喵。你的系统时间是不是改过喵？",
-  "multiplayer.disconnect.outdated_client": "客户端不兼容喵！要用%s 喵~",
-  "multiplayer.disconnect.outdated_server": "客户端不兼容喵！要用%s 喵~",
-  "multiplayer.disconnect.server_full": "服务器满了喵！",
-  "multiplayer.disconnect.server_shutdown": "服务器关掉了喵~",
-  "multiplayer.disconnect.slow_login": "登录超时了喵~",
-  "multiplayer.disconnect.too_many_pending_chats": "没确认的聊天消息太多了喵~",
-  "multiplayer.disconnect.transfers_disabled": "服务器不接受转移喵~",
-  "multiplayer.disconnect.unexpected_query_response": "从客户端收到了奇怪的自定义数据喵~",
-  "multiplayer.disconnect.unsigned_chat": "收到了没有签名或者签名无效的聊天数据包喵~",
-  "multiplayer.disconnect.unverified_username": "验证用户名失败了喵！",
-  "multiplayer.downloadingStats": "正在获取统计信息…喵~",
-  "multiplayer.downloadingTerrain": "加载地形中…喵~",
-  "multiplayer.lan.server_found": "发现新服务器：%s 喵~",
-  "multiplayer.message_not_delivered": "发不出聊天消息喵，看看服务器日志：%s",
-  "multiplayer.player.joined": "%s加入了游戏喵~",
-  "multiplayer.player.joined.renamed": "%s（以前叫%s）加入了游戏喵~",
-  "multiplayer.player.left": "%s退出了游戏喵~",
-  "multiplayer.player.list.hp": "%s生命值喵~",
-  "multiplayer.player.list.narration": "在线玩家：%s 喵~",
-  "multiplayer.requiredTexturePrompt.disconnect": "服务器需要自定义资源包喵~",
-  "multiplayer.requiredTexturePrompt.line1": "这个服务器需要用自定义的资源包喵~",
-  "multiplayer.requiredTexturePrompt.line2": "不用这个自定义资源包的话会断开你和服务器的连接的喵~",
-  "multiplayer.socialInteractions.not_available": "社交屏幕只在多人游戏世界里可以用喵~",
-  "multiplayer.status.and_more": "…还有其他%s名玩家…喵~",
-  "multiplayer.status.cancelled": "取消了喵~",
-  "multiplayer.status.cannot_connect": "连不上服务器喵~",
-  "multiplayer.status.cannot_resolve": "解析不了主机名喵~",
-  "multiplayer.status.finished": "完成了喵~",
-  "multiplayer.status.incompatible": "版本不兼容喵！",
-  "multiplayer.status.motd.narration": "服务器信息：%s 喵~",
-  "multiplayer.status.no_connection": "（没连接）喵~",
-  "multiplayer.status.old": "旧版喵~",
-  "multiplayer.status.online": "在线喵~",
-  "multiplayer.status.ping": "%s毫秒喵~",
-  "multiplayer.status.ping.narration": "延迟是%s毫秒喵~",
-  "multiplayer.status.pinging": "检测中…喵~",
-  "multiplayer.status.player_count": "%s/%s 喵~",
-  "multiplayer.status.player_count.narration": "%s名玩家在线，总共%s名玩家喵~",
-  "multiplayer.status.quitting": "正在退出喵~",
-  "multiplayer.status.request_handled": "状态请求处理好了喵~",
-  "multiplayer.status.unknown": "？？？喵~",
-  "multiplayer.status.unrequested": "收到了没请求的状态喵~",
-  "multiplayer.status.version.narration": "服务器版本：%s 喵~",
-  "multiplayer.stopSleeping": "起床啦喵~",
-  "multiplayer.texturePrompt.failure.line1": "用不了服务器资源包喵~",
-  "multiplayer.texturePrompt.failure.line2": "所有依赖自定义资源包的功能可能都不能正常用了喵~",
-  "multiplayer.texturePrompt.line1": "这个服务器推荐用自定义的资源包喵~",
-  "multiplayer.texturePrompt.line2": "你想自动下载安装它吗喵？",
-  "multiplayer.texturePrompt.serverPrompt": "%s\n\n服务器的消息喵：\n%s",
-  "multiplayer.title": "多人游戏喵~",
-  "multiplayer.unsecureserver.toast": "这个服务器上发的消息可能会被改过，可能不是原来的消息了喵~",
-  "multiplayer.unsecureserver.toast.title": "验证不了聊天消息喵~",
-  "multiplayerWarning.check": "不要再显示这个屏幕了喵~",
-  "multiplayerWarning.header": "警告：在线游戏是别人提供的喵~",
-  "multiplayerWarning.message": "警告：在线游戏是第三方服务器提供的，不是Mojang Studios或者Microsoft拥有、运营或者监督的喵。 在线游戏的时候，你可能会收到没被管理的聊天消息或者其他用户生成的内容，这些内容可能不适合所有人喵~",
-  "optimizeWorld.confirm.description": "这会试着用最新的游戏格式存所有的数据来优化世界喵。根据世界的情况，可能会花不少时间喵。一旦完成了，玩起来可能会更流畅，但是你的世界就不能和旧版游戏一起玩了喵。你确定要继续吗喵？",
-  "optimizeWorld.confirm.title": "优化世界喵~",
-  "optimizeWorld.info.converted": "已经更新的区块数：%s 喵~",
-  "optimizeWorld.info.skipped": "已经忽略的区块数：%s 喵~",
-  "optimizeWorld.info.total": "总区块数：%s 喵~",
-  "optimizeWorld.progress.counter": "%s / %s 喵~",
-  "optimizeWorld.progress.percentage": "%s%% 喵~",
-  "optimizeWorld.stage.counting": "统计区块中…喵~",
-  "optimizeWorld.stage.failed": "失败了喵！:(",
-  "optimizeWorld.stage.finished": "快完成了喵…",
-  "optimizeWorld.stage.finished.chunks": "快完成区块的升级了喵…",
-  "optimizeWorld.stage.finished.entities": "快完成实体的升级了喵…",
-  "optimizeWorld.stage.finished.poi": "快完成兴趣点的升级了喵…",
-  "optimizeWorld.stage.upgrading": "升级所有区块中…喵~",
-  "optimizeWorld.stage.upgrading.chunks": "升级所有区块中…喵~",
-  "optimizeWorld.stage.upgrading.entities": "升级所有实体中…喵~",
-  "optimizeWorld.stage.upgrading.poi": "升级所有兴趣点中…喵~",
-  "optimizeWorld.title": "正在优化世界“%s”喵~",
-  "options.accessibility": "辅助功能设置…喵~",
-  "options.accessibility.high_contrast": "高对比度喵~",
-  "options.accessibility.high_contrast.error.tooltip": "高对比度资源包用不了喵~",
-  "options.accessibility.high_contrast.tooltip": "提高UI控件的对比度喵~",
-  "options.accessibility.link": "辅助功能指南喵~",
-  "options.accessibility.menu_background_blurriness": "菜单背景模糊程度喵~",
-  "options.accessibility.menu_background_blurriness.tooltip": "更改菜单背景的模糊程度喵~",
-  "options.accessibility.narrator_hotkey": "复述功能快捷键喵~",
-  "options.accessibility.narrator_hotkey.mac.tooltip": "可以用“Cmd+B”打开和关闭复述功能喵~",
-  "options.accessibility.narrator_hotkey.tooltip": "可以用“Ctrl+B”打开和关闭复述功能喵~",
-  "options.accessibility.panorama_speed": "全景图滚动速度喵~",
-  "options.accessibility.text_background": "文本背景喵~",
-  "options.accessibility.text_background.chat": "聊天喵~",
-  "options.accessibility.text_background.everywhere": "全局喵~",
-  "options.accessibility.text_background_opacity": "文本背景不透明度喵~",
-  "options.accessibility.title": "辅助功能设置喵~",
-  "options.allowServerListing": "允许列入服务器玩家列表喵~",
-  "options.allowServerListing.tooltip": "服务器可能会公开列出目前在线的玩家喵。\n如果关掉这个选项，你的名字就不会显示在这个列表里了喵~",
+  "multiplayer.disconnect.incompatible": "客户端版本不兼容喵呜！要用%s才能进来玩耍啦～喵～",
+  "multiplayer.disconnect.invalid_entity_attacked": "不可以攻击空气啦喵！那是无效的实体喵呜～",
+  "multiplayer.disconnect.invalid_packet": "服务器发了奇怪的小鱼干数据包喵！肯定是坏掉了喵～",
+  "multiplayer.disconnect.invalid_player_data": "玩家的数据乱糟糟的喵！要梳梳毛整理一下啦～",
+  "multiplayer.disconnect.invalid_player_movement": "收到可疑的移动数据包喵！主人是不是在瞬移呀喵？",
+  "multiplayer.disconnect.invalid_public_key_signature": "公钥签名失效了喵！快重启游戏蹭蹭服务器试试嘛～(=ↀωↀ=)",
+  "multiplayer.disconnect.invalid_vehicle_movement": "载具数据包不对劲喵！难道是飞天矿车喵？",
+  "multiplayer.disconnect.ip_banned": "IP被关进猫砂盆里了喵！暂时不能进来玩了啦～(>﹏<)",
+  "multiplayer.disconnect.kicked": "被管理员用逗猫棒赶出来了喵～",
+  "multiplayer.disconnect.missing_tags": "标签收集不完整喵！快找服主大人贴贴补全嘛～(=ฅ•ω•ฅ=)",
+  "multiplayer.disconnect.name_taken": "这个名字被其他小猫咪占用了喵！换个带肉球印记的名字吧～",
+  "multiplayer.disconnect.not_whitelisted": "不在白名单里喵！要服主摸摸头才能进哦～",
+  "multiplayer.disconnect.out_of_order_chat": "聊天数据包乱序了喵！是不是偷偷调了时钟呀喵？",
+  "multiplayer.disconnect.outdated_client": "客户端太旧了喵！要更新到%s才能一起玩毛线球哦～",
+  "multiplayer.disconnect.outdated_server": "服务器还在用旧版本喵！要等服主升级到%s才行呐～",
+  "multiplayer.disconnect.server_full": "服务器挤满了喵！连尾巴都塞不进去了啦～(ﾉ≧∇≦)ﾉ",
+  "multiplayer.disconnect.server_shutdown": "服务器睡着打呼噜了喵～明天再来玩吧！",
+  "multiplayer.disconnect.slow_login": "登录太久把小鱼干烤糊了喵！(>^ω^<)",
+  "multiplayer.disconnect.too_many_pending_chats": "未确认的喵喵消息堆成山了啦！",
+  "multiplayer.disconnect.transfers_disabled": "这个服务器不收小鱼干转账喵～",
+  "multiplayer.disconnect.unexpected_query_response": "收到奇怪的自定义数据喵！是不是藏了猫薄荷？",
+  "multiplayer.disconnect.unsigned_chat": "聊天包没有爪印签名喵！不能信任啦～",
+  "multiplayer.disconnect.unverified_username": "用户名验证失败喵！要再舔舔爪子试试嘛～",
+  "multiplayer.downloadingStats": "正在收集毛线球统计数据喵～",
+  "multiplayer.downloadingTerrain": "正在铺猫砂地形喵～请稍等哦！",
+  "multiplayer.lan.server_found": "嗅到新服务器啦：%s 喵！(ฅ´ω`ฅ)",
+  "multiplayer.message_not_delivered": "消息卡在喉咙里了喵！看看服务器日志：%s",
+  "multiplayer.player.joined": "%s蹦蹦跳跳加入游戏了喵～",
+  "multiplayer.player.joined.renamed": "%s（以前叫%s的小可爱）来玩了喵！",
+  "multiplayer.player.left": "%s揣着小鱼干溜走了喵～",
+  "multiplayer.player.list.hp": "%s条命喵！还剩这么多呢～",
+  "multiplayer.player.list.narration": "在线小伙伴：%s 都在玩毛线球喵～",
+  "multiplayer.requiredTexturePrompt.disconnect": "必须用专属猫窝材质包喵！",
+  "multiplayer.requiredTexturePrompt.line1": "这个服务器要穿特定皮肤才能进喵～",
+  "multiplayer.requiredTexturePrompt.line2": "不换装的话会被关在外面喵呜～(｡•́︿•̀｡)",
+  "multiplayer.socialInteractions.not_available": "社交功能只在多人猫窝开放喵～",
+  "multiplayer.status.and_more": "…还有%s只小猫咪在玩喵～",
+  "multiplayer.status.cannot_connect": "连不上服务器喵！网线被咬断了嘛？",
+  "multiplayer.status.cannot_resolve": "找不到服务器地址喵！是不是写错了呀？",
+  "multiplayer.status.finished": "完成啦喵！来吃奖励小鱼干吧～",
+  "multiplayer.status.incompatible": "版本不对喵！爪爪不兼容啦～",
+  "multiplayer.status.motd.narration": "服务器留言：%s 喵～要认真听哦！",
+  "multiplayer.status.old": "版本太老旧了喵！",
+  "multiplayer.status.online": "在线可rua喵～",
+  "multiplayer.status.ping": "%s毫秒喵！尾巴反应超快的～",
+  "multiplayer.status.pinging": "正在测量爪爪延迟喵～",
+  "multiplayer.status.player_count": "%s/%s 喵！还能再塞几只小猫咪～",
+  "multiplayer.status.quitting": "正在收起小肉垫退出喵～",
+  "multiplayer.status.unknown": "？？？喵！完全看不懂啦～",
+  "multiplayer.stopSleeping": "太阳晒屁股了喵！快起床～",
+  "multiplayer.texturePrompt.failure.line1": "材质包加载失败喵！",
+  "multiplayer.texturePrompt.failure.line2": "专属功能可能变成乱码小鱼干了喵～",
+  "multiplayer.texturePrompt.line1": "推荐使用服务器特制猫窝材质包喵～",
+  "multiplayer.texturePrompt.line2": "要自动下载安装嘛喵？保证超软萌的！",
+  "multiplayer.texturePrompt.serverPrompt": "%s\n\n服主留言喵：\n%s",
+  "multiplayer.title": "多人猫窝大冒险喵～",
+  "multiplayer.unsecureserver.toast": "这里的聊天可能被篡改过喵！要小心坏猫咪～",
+  "multiplayer.unsecureserver.toast.title": "聊天无法验证喵！(>ω<)",
+  "multiplayerWarning.check": "不要再吓唬本喵了喵～",
+  "multiplayerWarning.message": "注意喵！在线游戏是其他两脚兽提供的猫爬架，不是 Mojang 的官方猫窝哦～可能会看到奇怪的留言，要保护好小肉垫！",
   "options.darkMojangStudiosBackgroundColor": "黑白色猫爪爪徽标",
   "options.darkMojangStudiosBackgroundColor.tooltip": "把加载画面变成黑猫配色~ 酷酷的喵！(ฅ• . •ฅ)",
   "options.darknessEffectScale": "黑雾猫爪爪效果",
