支持硅基流动

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -455,12 +455,16 @@
   "screen.toneko.config.key.chat.format.des": "You can modify the chat format, %name%=Player Name, %msg%=Player Message, %prefix%=Prefix",
   "screen.toneko.config.key.ai.enable": "Enable Neko AI",
   "screen.toneko.config.key.ai.enable.des": "You can chat with Neko in the game!",
-  "screen.toneko.config.key.ai.model": "AI Model",
+  "screen.toneko.config.key.ai.service": "Service",
+  "screen.toneko.config.key.ai.service.des": "AI使用的服务§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.model": "Model",
   "screen.toneko.config.key.ai.model.des": "The AI model in use",
-  "screen.toneko.config.key.ai.key": "AI API Key",
+  "screen.toneko.config.key.ai.key": "API Key",
   "screen.toneko.config.key.ai.key.des": "API Key §o(Click to view details)",
-  "screen.toneko.config.key.ai.prompt": "AI Prompt",
+  "screen.toneko.config.key.ai.prompt": "Prompt",
   "screen.toneko.config.key.ai.prompt.des": "No need for me to explain, right? §o(Click to view details)",
+  "screen.toneko.config.key.ai.show_think": "Showing Thinking",
+  "screen.toneko.config.key.ai.show_think.des": "Is showing thinking content?",
   "screen.toneko.config.key.ai.proxy.enable": "Enable HTTP Proxy",
   "screen.toneko.config.key.ai.proxy.enable.des": "After enabling, AI",
   "screen.toneko.config.key.ai.proxy.ip": "Proxy IP",
