--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -454,15 +454,19 @@
   "screen.toneko.config.key.chat.format": "聊天格式",
   "screen.toneko.config.key.chat.format.des": "你可以修改聊天格式,%name%=玩家名称,%msg%=玩家消息,%prefix%=前缀",
   "screen.toneko.config.key.ai.enable": "启用猫娘AI",
-  "screen.toneko.config.key.ai.enable.des": "你可以在游戏中与猫娘进行聊天哦",
-  "screen.toneko.config.key.ai.model": "AI模型",
-  "screen.toneko.config.key.ai.model.des": "AI使用的模型",
-  "screen.toneko.config.key.ai.key": "AI API密钥",
+  "screen.toneko.config.key.ai.enable.des": "你可以在游戏中与猫娘进行聊天哦§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.service": "服务",
+  "screen.toneko.config.key.ai.service.des": "AI使用的服务§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.model": "模型",
+  "screen.toneko.config.key.ai.model.des": "AI使用的模型§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.key": "API密钥",
   "screen.toneko.config.key.ai.key.des": "API密钥§o(点击可以查看详细信息哦)",
-  "screen.toneko.config.key.ai.prompt": "AI提示词",
+  "screen.toneko.config.key.ai.prompt": "提示词",
   "screen.toneko.config.key.ai.prompt.des": "想必不用咱多说了叭§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.show_think": "显示思考内容",
+  "screen.toneko.config.key.ai.show_think.des": "是否显示思考的内容",
   "screen.toneko.config.key.ai.proxy.enable": "启用http代理",
-  "screen.toneko.config.key.ai.proxy.enable.des": "启用后AI",
+  "screen.toneko.config.key.ai.proxy.enable.des": "启用后将会通过代理来请求API§o(点击可以查看详细信息哦)",
   "screen.toneko.config.key.ai.proxy.ip": "代理ip",
   "screen.toneko.config.key.ai.proxy.ip.des": "Http代理ip",
   "screen.toneko.config.key.ai.proxy.port": "Http代理端口",
