--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -455,14 +455,18 @@
   "screen.toneko.config.key.chat.format.des": "你可以修改聊天格式,%name%=玩家名稱,%msg%=玩家消息,%prefix%=前綴",
   "screen.toneko.config.key.ai.enable": "啟用貓娘AI",
   "screen.toneko.config.key.ai.enable.des": "你可以在遊戲中與貓娘進行聊天哦",
+  "screen.toneko.config.key.ai.service": "AI服务",
+  "screen.toneko.config.key.ai.service.des": "AI使用的服务§o(点击可以查看详细信息哦)",
   "screen.toneko.config.key.ai.model": "AI模型",
   "screen.toneko.config.key.ai.model.des": "AI使用的模型",
   "screen.toneko.config.key.ai.key": "AI API密鑰",
   "screen.toneko.config.key.ai.key.des": "API密鑰§o(點擊可以查看詳細資訊哦)",
   "screen.toneko.config.key.ai.prompt": "AI提示詞",
   "screen.toneko.config.key.ai.prompt.des": "想必不用咱多說了吧§o(點擊可以查看詳細資訊哦)",
+  "screen.toneko.config.key.ai.show_think": "显示思考内容",
+  "screen.toneko.config.key.ai.show_think.des": "AI是否显示思考的内容",
   "screen.toneko.config.key.ai.proxy.enable": "啟用http代理",
-  "screen.toneko.config.key.ai.proxy.enable.des": "啟用後AI",
+  "screen.toneko.config.key.ai.proxy.enable.des": "启用后将会通过代理来请求API§o(点击可以查看详细信息哦)",
   "screen.toneko.config.key.ai.proxy.ip": "代理ip",
   "screen.toneko.config.key.ai.proxy.ip.des": "Http代理ip",
   "screen.toneko.config.key.ai.proxy.port": "Http代理端口",
