为appleskin,jade,zoomify添加萌体中文

--- a/common/src/main/resources/assets/minecraft/lang/zh_cn.json
+++ b/common/src/main/resources/assets/minecraft/lang/zh_cn.json
@@ -693,14 +693,14 @@
   "menu.reportBugs": "报告游戏虫虫喵～（叼着bug出现）",
   "menu.resetdemo": "重置试玩沙盘喵～（用尾巴扫平）",
   "menu.respawning": "正在九条命重生中喵～",
-  "menu.returnToGame": "继续抓游戏老鼠喵～",
+  "menu.returnToGame": "继续游戏喵～",
   "menu.returnToMenu": "保存进度并退回主菜单喵～（收爪）",
   "menu.savingChunks": "正在把区块藏进猫窝喵～",
   "menu.savingLevel": "世界正在蜷成一团保存喵～",
   "menu.sendFeedback": "发送猫猫意见条喵～",
   "menu.shareToLan": "开放给局域网小伙伴喵～",
   "menu.singleplayer": "独自玩毛线球模式喵～",
-  "menu.working": "正在努力抓数据老鼠喵…",
+  "menu.working": "正在努力抓数据喵…",
   "merchant.current_level": "商人的小鱼干库存等级喵～",
   "merchant.deprecated": "村民每天最多补两次货喵～（摇铃铛提醒）",
   "mount.onboard": "按%1$s就能优雅落地喵～（翘尾巴）",
