为yes steve model,ftbteams,toms storage添加萌体中文，同时将萌体中文改为材质包模式

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -506,6 +506,8 @@
   "screen.toneko.config.random.27": "Keep the moon bright",
   "screen.toneko.config.random.28": "Don't let unhappy emotions occupy your heart, neko wishes you happiness forever",
   "gui.back.des": "I guess you know the meaning",
+  "resourcePack.toneko.moe": "Moe Text",
+  "resourcePack.toneko.moe.des": "Make text moe~~(Only Chinese)",
   "misc.toneko.owner": "owner",
   "misc.toneko.nya": "meow",
   "misc.toneko.prefix": "§aneko",
