--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -509,6 +509,8 @@
   "screen.toneko.config.random.27": "要让月亮一直皎洁哦",
   "screen.toneko.config.random.28": "不要让不开心的情绪占据了你的心灵哦，猫猫祝你一直开心",
   "gui.back.des": "不用解释你也知道是什么意思叭",
+  "resourcePack.toneko.moe": "萌体中文",
+  "resourcePack.toneko.moe.des": "变得萌萌哒~",
   "misc.toneko.owner": "主人",
   "misc.toneko.nya": "喵",
   "misc.toneko.prefix": "§a猫娘",
