添加音乐&命令

--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -12,6 +12,7 @@
   "item.toneko.catnip": "猫薄荷",
   "item.toneko.catnip_sandwich": "猫薄荷三明治",
   "item.toneko.catnip_seed": "猫薄荷种子",
+  "item.toneko.music_disc_kawaii": "音乐唱片",
   "block.toneko.catnip": "猫薄荷",
   "effect.toneko.exciting": "兴奋",
   "itemGroup.toneko": "貓貓",
@@ -242,7 +243,11 @@
   "command.tonekoadmin.data.loaded_count": "§a当前已经加载的猫娘数据量：%s",
   "command.tonekoadmin.data.all_count": "§a一共的猫娘数据量：%s",
   "command.tonekoadmin.data.delete_rubbish": "§a成功删除了%s个垃圾数据了喵，消耗了%s秒~",
-  "command.tonekoadmin.help": "§b/tonekoadmin 幫助：\n§a/tonekoadmin help §b取得幫助\n§a/tonekoadmin set <玩家名稱> §b將玩家設定為貓娘或取消設定\n§a/tonekoadmin reload §b重新載入設定檔和語言檔案\n§a/tonekoadmin data §b数据相",
+  "command.tonekoadmin.config.not_found": "§c找不到这个配置哦：%s",
+  "command.tonekoadmin.config.get": "§a配置项%s§a的值是：%s",
+  "command.tonekoadmin.config.type_error": "§c类型错误喵",
+  "command.tonekoadmin.config.set": "§a成功将配置项%s§a的值设置为了：%s",
+  "command.tonekoadmin.help": "§b/tonekoadmin 幫助：\n§a/tonekoadmin help §b取得幫助\n§a/tonekoadmin set <玩家名稱> §b將玩家設定為貓娘或取消設定\n§a/tonekoadmin reload §b重新載入設定檔和語言檔案\n§a/tonekoadmin data §b数据相关\n§a/tonekoadmin config §b配置相关",
   "command.neko.help": "§b/neko 幫助（注意喔，這些指令都是貓貓專有的喔）：\n§a/neko jump §b跳得更高！\n§a/neko vision §b想和貓貓一樣在夜晚看得更清楚嗎\n§a/neko speed §b太快啦 (>_<)\n§a/neko lie §b躺下來休息會吧\n§a/neko nickname <暱稱> §b設定一個可愛的暱稱吧\n§a/neko level §b看看你的貓貓等級\n§a/neko lore <描述> §b給你手中的物品設定一個可愛的描述吧",
   "command.neko.not_neko": "§c你並不是一隻貓貓喔",
   "command.neko.nickname.success": "§a現在你的暱稱是 %s §a啦",
