--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.toneko.catnip": "Catnip",
   "item.toneko.catnip_sandwich": "Catnip Sandwich",
   "item.toneko.catnip_seed": "Catnip Seed",
+  "item.toneko.music_disc_kawaii": "Music Disc",
   "block.toneko.catnip": "Catnip",
   "effect.toneko.exciting": "Exciting",
   "itemGroup.toneko": "Neko",
@@ -242,7 +243,11 @@
   "command.tonekoadmin.data.loaded_count": "§aThe amount of neko data currently loaded: %s",
   "command.tonekoadmin.data.all_count": "§aThe total amount of neko data: %s",
   "command.tonekoadmin.data.delete_rubbish": "§aSuccessfully deleted %s pieces of rubbish data, took %s seconds~",
-  "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language\n§a/tonekoadmin data §bAbout data",
+  "command.tonekoadmin.config.not_found": "§cCannot find this configuration: %s",
+  "command.tonekoadmin.config.get": "§aThe value of configuration item %s§a is: %s",
+  "command.tonekoadmin.config.type_error": "§cType error",
+  "command.tonekoadmin.config.set": "§aSuccessfully set the value of configuration item %s§a to: %s",
+  "command.tonekoadmin.help": "§b/tonekoadmin help:\n§a/tonekoadmin help §bget help\n§a/tonekoadmin set <player> §bSet player to neko or unset\n§a/tonekoadmin reload §bReload the config and language\n§a/tonekoadmin data §bAbout data\n§a/tonekoadmin config §bConfig",
   "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)\n§a/neko lie §bLie down and rest for a while\n§a/neko nickname <nickname> §bSet a cute nickname\n§a/neko level §bShow your neko level\n§a/neko lore <lore> §bSet a cute lore for your item in hand.",
   "command.neko.not_neko": "§cYou are not a neko",
   "command.neko.nickname.success": "§aYour nickname is %s §a now",
