--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -12,6 +12,7 @@
   "item.toneko.catnip": "猫薄荷",
   "item.toneko.catnip_sandwich": "猫薄荷三明治",
   "item.toneko.catnip_seed": "猫薄荷种子",
+  "item.toneko.music_disc_kawaii": "音乐唱片",
   "block.toneko.catnip": "猫薄荷",
   "effect.toneko.exciting": "兴奋",
   "itemGroup.toneko": "猫猫",
@@ -242,7 +243,11 @@
   "command.tonekoadmin.data.loaded_count": "§a当前已经加载的猫娘数据量：%s",
   "command.tonekoadmin.data.all_count": "§a一共的猫娘数据量：%s",
   "command.tonekoadmin.data.delete_rubbish": "§a成功删除了%s个垃圾数据了喵，消耗了%s秒~",
-  "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件\n§a/tonekoadmin data §b数据相关",
+  "command.tonekoadmin.config.not_found": "§c找不到这个配置哦：%s",
+  "command.tonekoadmin.config.get": "§a配置项%s§a的值是：%s",
+  "command.tonekoadmin.config.type_error": "§c类型错误喵",
+  "command.tonekoadmin.config.set": "§a成功将配置项%s§a的值设置为了：%s",
+  "command.tonekoadmin.help": "§b/tonekoadmin 帮助:\n§a/tonekoadmin help §b获取帮助\n§a/tonekoadmin set <玩家名称> §b将玩家设置为猫娘或取消设置\n§a/tonekoadmin reload §b重新加载配置文件和语言文件\n§a/tonekoadmin data §b数据相关\n§a/tonekoadmin config §b配置相关",
   "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)\n§a/neko lie §b躺下来休息会吧\n§a/neko nickname <昵称> §b设置一个可爱的昵称吧\n§a/neko level §b看看你的猫猫等级\n§a/neko lore <描述> §b给你手中的物品设置一个可爱的描述吧",
   "command.neko.not_neko": "§c你并不是一只猫猫哦",
   "command.neko.nickname.success": "§a现在你的昵称是 %s §a啦",
