--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -513,6 +513,7 @@
   "screen.toneko.config.random.26": "(｡･ω･)ﾉﾞ",
   "screen.toneko.config.random.27": "要让月亮一直皎洁哦",
   "screen.toneko.config.random.28": "不要让不开心的情绪占据了你的心灵哦，猫猫祝你一直开心",
+  "gui.toneko.roulette.tip": "使用鼠标滚轮或键盘方向键来选择\n按下鼠标左键或空格键来确定",
   "gui.back.des": "不用解释你也知道是什么意思叭",
   "resourcePack.toneko.moe": "萌体中文",
   "resourcePack.toneko.moe.des": "变得萌萌哒~",
