--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -215,6 +215,7 @@
   "key.toneko.speed": "Get speed boost",
   "key.toneko.jump": "Get jump boost",
   "key.toneko.vision": "Get night vision",
+  "key.toneko.roulette": "Open roulette",
   "command.toneko.not_player": "§cOnly player can be command executor",
   "command.toneko.not_found": "§cUnable to find the player.",
   "command.toneko.player.success": "§aYou become §6%s §a's owner now-nya",
@@ -510,6 +511,14 @@
   "screen.toneko.config.random.26": "(｡･ω･)ﾉﾞ",
   "screen.toneko.config.random.27": "Keep the moon bright",
   "screen.toneko.config.random.28": "Don't let unhappy emotions occupy your heart, neko wishes you happiness forever",
+  "gui.toneko.roulette.tip": "Use the mouse wheel or keyboard arrow keys to select, press the left mouse button or space bar to confirm",
+  "gui.toneko.roulette.option.close": "Close",
+  "gui.toneko.roulette.option.speed": "Speed boost",
+  "gui.toneko.roulette.option.jump": "Jump boost",
+  "gui.toneko.roulette.option.vision": "Night vision",
+  "gui.toneko.roulette.option.lie": "Lie down",
+  "gui.toneko.roulette.option.get_down": "Lie down",
+  "gui.toneko.roulette.option.ride": "Ride",
   "gui.back.des": "I guess you know the meaning",
   "resourcePack.toneko.moe": "Moe Text",
   "resourcePack.toneko.moe.des": "Make text moe~~(Only Chinese)",
