--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -215,6 +215,7 @@
   "key.toneko.speed": "获取速度提升",
   "key.toneko.jump": "获取跳跃提升",
   "key.toneko.vision": "获取夜视",
+  "key.toneko.roulette": "打开轮盘",
   "command.toneko.not_player": "§c指令執行者只能是玩家喔",
   "command.toneko.not_found": "§c沒找到這個玩家喔",
   "command.toneko.player.success": "§a你現在成為了 §6%s §a的主人喵～",
@@ -510,6 +511,14 @@
   "screen.toneko.config.random.26": "(｡･ω･)ﾉﾞ",
   "screen.toneko.config.random.27": "要讓月亮一直皎潔哦",
   "screen.toneko.config.random.28": "不要讓不開心的情緒佔據了你的心靈哦，貓貓祝你一直開心",
+  "gui.toneko.roulette.tip": "使用鼠标滚轮或键盘方向键来选择，按下鼠标左键或空格键来确定",
+  "gui.toneko.roulette.option.close": "关闭",
+  "gui.toneko.roulette.option.speed": "速度提升",
+  "gui.toneko.roulette.option.jump": "跳跃提升",
+  "gui.toneko.roulette.option.vision": "夜视",
+  "gui.toneko.roulette.option.lie": "躺下",
+  "gui.toneko.roulette.option.get_down": "趴下",
+  "gui.toneko.roulette.option.ride": "乘骑",
   "gui.back.des": "不用解释你也知道是什么意思叭",
   "resourcePack.toneko.moe": "萌体中文",
   "resourcePack.toneko.moe.des": "变得萌萌哒~",
