修复虫儿飞曲谱

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -471,6 +471,12 @@
   "screen.toneko.config.key.ai.prompt.des": "No need for me to explain, right? §o(Click to view details)",
   "screen.toneko.config.key.ai.show_think": "Showing Thinking",
   "screen.toneko.config.key.ai.show_think.des": "Is showing thinking content?",
+  "screen.toneko.config.key.ai.tts.enable": "Enable voice",
+  "screen.toneko.config.key.ai.tts.enable.des": "Whether to use AI voice",
+  "screen.toneko.config.key.ai.tts.service": "AI voice service",
+  "screen.toneko.config.key.ai.tts.service.des": "Service used by AI voice§o (click to view detailed information)",
+  "screen.toneko.config.key.ai.tts.voice": "Voice tone",
+  "screen.toneko.config.key.ai.tts.voice.des": "Timbre used by AI voice§o (click to view detailed information)",
   "screen.toneko.config.key.ai.proxy.enable": "Enable HTTP Proxy",
   "screen.toneko.config.key.ai.proxy.enable.des": "After enabling, AI",
   "screen.toneko.config.key.ai.proxy.ip": "Proxy IP",
@@ -479,6 +485,10 @@
   "screen.toneko.config.key.ai.proxy.port.des": "HTTP Proxy Port",
   "screen.toneko.config.key.stats": "Enable cat statistics",
   "screen.toneko.config.key.stats.des": "This is the cat statistics system",
+  "screen.toneko.config.group.chat": "Chat",
+  "screen.toneko.config.group.ai": "AI",
+  "screen.toneko.config.group.tts": "AI Voice",
+  "screen.toneko.config.group.proxy": "Proxy",
   "screen.toneko.config.button.quit": "I have changed it",
   "screen.toneko.config.button.apply": "Take effect immediately",
   "screen.toneko.config.button.random": "Change",
