--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -471,6 +471,12 @@
   "screen.toneko.config.key.ai.prompt.des": "想必不用咱多說了吧§o(點擊可以查看詳細資訊哦)",
   "screen.toneko.config.key.ai.show_think": "显示思考内容",
   "screen.toneko.config.key.ai.show_think.des": "AI是否显示思考的内容",
+  "screen.toneko.config.key.ai.tts.enable": "启用语音",
+  "screen.toneko.config.key.ai.tts.enable.des": "是否使用AI语音",
+  "screen.toneko.config.key.ai.tts.service": "AI语音服务",
+  "screen.toneko.config.key.ai.tts.service.des": "AI语音使用的服务§o(点击可以查看详细信息哦)",
+  "screen.toneko.config.key.ai.tts.voice": "语音音色",
+  "screen.toneko.config.key.ai.tts.voice.des": "AI语音使用的音色§o(点击可以查看详细信息哦)",
   "screen.toneko.config.key.ai.proxy.enable": "啟用http代理",
   "screen.toneko.config.key.ai.proxy.enable.des": "启用后将会通过代理来请求API§o(点击可以查看详细信息哦)",
   "screen.toneko.config.key.ai.proxy.ip": "代理ip",
@@ -479,6 +485,10 @@
   "screen.toneko.config.key.ai.proxy.port.des": "Http代理端口",
   "screen.toneko.config.key.stats": "啟用貓貓統計",
   "screen.toneko.config.key.stats.des": "這是貓貓的統計系統",
+  "screen.toneko.config.group.chat": "聊天",
+  "screen.toneko.config.group.ai": "AI",
+  "screen.toneko.config.group.tts": "AI语音",
+  "screen.toneko.config.group.proxy": "代理",
   "screen.toneko.config.button.quit": "我改囉",
   "screen.toneko.config.button.apply": "馬上生效",
   "screen.toneko.config.button.random": "換一個",
