--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -215,6 +215,7 @@
   "key.toneko.speed": "Get speed boost",
   "key.toneko.jump": "Get jump boost",
   "key.toneko.vision": "Get night vision",
+  "key.toneko.ride_head": "Read on head",
   "key.toneko.roulette": "Open roulette",
   "command.toneko.not_player": "§cOnly player can be command executor",
   "command.toneko.not_found": "§cUnable to find the player.",
@@ -529,6 +530,7 @@
   "gui.toneko.roulette.option.lie": "Lie down",
   "gui.toneko.roulette.option.get_down": "Lie down",
   "gui.toneko.roulette.option.ride": "Ride",
+  "gui.toneko.roulette.option.ride_head": "Ride on head",
   "gui.back.des": "I guess you know the meaning",
   "resourcePack.toneko.moe": "Moe Text",
   "resourcePack.toneko.moe.des": "Make text moe~~(Only Chinese)",
