--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -215,6 +215,7 @@
   "key.toneko.speed": "获取速度提升",
   "key.toneko.jump": "获取跳跃提升",
   "key.toneko.vision": "获取夜视",
+  "key.toneko.ride_head": "上头",
   "key.toneko.roulette": "打开轮盘",
   "command.toneko.not_player": "§c命令执行者只能是玩家哦",
   "command.toneko.not_found": "§c没找到这个玩家哦",
@@ -529,6 +530,7 @@
   "gui.toneko.roulette.option.lie": "躺下",
   "gui.toneko.roulette.option.get_down": "趴下",
   "gui.toneko.roulette.option.ride": "乘骑",
+  "gui.toneko.roulette.option.ride_head": "上头",
   "gui.back.des": "不用解释你也知道是什么意思叭",
   "resourcePack.toneko.moe": "萌体中文",
   "resourcePack.toneko.moe.des": "变得萌萌哒~",
