添加火箭筒

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -92,6 +92,13 @@
   "item.toneko.neko_ears": "Neko ears",
   "item.toneko.neko_potion.effect.empty": "Neko Potion",
   "item.toneko.neko_tail": "Neko Tail",
+  "item.toneko.bazooka": "Bazooka",
+  "item.toneko.bazooka.reloaded": "§aAmmunition reloaded!",
+  "item.toneko.bazooka.no_ammo_selected": "§cNo ammunition selected",
+  "item.toneko.bazooka.out_of_ammo": "§cOut of ammunition",
+  "item.toneko.bazooka.tip.ammo_type": "Selected ammunition：",
+  "item.toneko.bazooka.tip.no_ammo": "No ammunition",
+  "item.toneko.bazooka.tip.reload": "§bPress Shift+Right Click to reload",
   "itemGroup.toneko": "Neko",
   "key.toneko.get_down": "get down",
   "key.toneko.jump": "Get jump boost",
