--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -92,6 +92,13 @@
   "item.toneko.neko_ears": "猫耳朵",
   "item.toneko.neko_potion.effect.empty": "猫娘药水",
   "item.toneko.neko_tail": "猫尾巴",
+  "item.toneko.bazooka": "火箭筒",
+  "item.toneko.bazooka.reloaded": "§a弹药填装成功",
+  "item.toneko.bazooka.no_ammo_selected": "§c未设置弹药",
+  "item.toneko.bazooka.out_of_ammo": "§c弹药已耗尽",
+  "item.toneko.bazooka.tip.ammo_type": "当前弹药：",
+  "item.toneko.bazooka.tip.no_ammo": "无弹药",
+  "item.toneko.bazooka.tip.reload": "§b按下Shift+右键自动填装",
   "itemGroup.toneko": "猫猫",
   "key.toneko.get_down": "趴下",
   "key.toneko.jump": "获取跳跃提升",
