猫猫机制大改革！

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -12,11 +12,13 @@
   "advancements.toneko.root.description": "§d制作一个喵喵收集器，然后与猫猫贴贴来吸收猫猫能量",
   "advancements.toneko.root.title": "§a和猫猫贴贴",
   "attribute.name.neko.degree": "猫猫等级",
+  "attribute.name.neko.max_energy": "最大猫猫能量",
   "block.toneko.catnip": "猫薄荷",
   "command.neko.help": "§b/neko 帮助(注意哦,这些命令都是猫猫专有的哦):\n§a/neko jump §b跳的更高!\n§a/neko vision §b想和猫猫一样在夜晚看得更清楚吗\n§a/neko speed §b太快啦(>_<)\n§a/neko lie §b躺下来休息会吧\n§a/neko nickname <昵称> §b设置一个可爱的昵称吧\n§a/neko level §b看看你的猫猫等级\n§a/neko lore <描述> §b给你手中的物品设置一个可爱的描述吧",
   "command.neko.level.success": "§a你的猫猫等级是 %f §a啦",
   "command.neko.lore.no_item": "§c你手上什么都没有诶",
   "command.neko.nickname.success": "§a现在你的昵称是 %s §a啦",
+  "command.neko.effect.not_enough_energy": "§c能量不足啦",
   "command.neko.not_neko": "§c你并不是一只猫猫哦",
   "command.quirk.add": "§a成功添加了 %s §aXP了喵",
   "command.quirk.already_quirk": "§c这个XP已经存在了喵~",
