修复一些小bug

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -11,12 +11,14 @@
   "advancements.toneko.neko_lv100.title": "§aNeko LV100",
   "advancements.toneko.root.description": "§dMake a Neko Collector, then stick to neko to absorb neko energy",
   "advancements.toneko.root.title": "§aStick to neko",
-  "attribute.name.neko.degree": "neko degree",
+  "attribute.name.neko.degree": "Neko Degree",
+  "attribute.name.neko.max_energy": "Max Neko Energy",
   "block.toneko.catnip": "Catnip",
   "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)\n§a/neko lie §bLie down and rest for a while\n§a/neko nickname <nickname> §bSet a cute nickname\n§a/neko level §bShow your neko level\n§a/neko lore <lore> §bSet a cute lore for your item in hand.",
   "command.neko.level.success": "§aYou neko level is %f",
   "command.neko.lore.no_item": "§cI can find air from your hand.",
   "command.neko.nickname.success": "§aYour nickname is %s §a now",
+  "command.neko.effect.not_enough_energy": "§cYour Neko Energy is not enough",
   "command.neko.not_neko": "§cYou are not a neko",
   "command.quirk.add": "§aAdd quirk %s §a successful",
   "command.quirk.already_quirk": "§cThis quirk has already existed",
