--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -12,11 +12,13 @@
   "advancements.toneko.root.description": "§d製作一個喵喵收集器，然後與貓貓貼貼來吸收貓貓能量",
   "advancements.toneko.root.title": "§a與貓貓貼紙",
   "attribute.name.neko.degree": "貓貓等級",
+  "attribute.name.neko.max_energy": "最大猫猫能量",
   "block.toneko.catnip": "猫薄荷",
   "command.neko.help": "§b/neko 幫助（注意喔，這些指令都是貓貓專有的喔）：\n§a/neko jump §b跳得更高！\n§a/neko vision §b想和貓貓一樣在夜晚看得更清楚嗎\n§a/neko speed §b太快啦 (>_<)\n§a/neko lie §b躺下來休息會吧\n§a/neko nickname <暱稱> §b設定一個可愛的暱稱吧\n§a/neko level §b看看你的貓貓等級\n§a/neko lore <描述> §b給你手中的物品設定一個可愛的描述吧",
   "command.neko.level.success": "§a你的貓貓等級是 %f §a啦",
   "command.neko.lore.no_item": "§c你手上什麼都沒有耶",
   "command.neko.nickname.success": "§a現在你的暱稱是 %s §a啦",
+  "command.neko.effect.not_enough_energy": "§c能量不足啦",
   "command.neko.not_neko": "§c你並不是一隻貓貓喔",
   "command.quirk.add": "§a成功新增了 %s §a性癖了喵",
   "command.quirk.already_quirk": "§c這個性癖已經存在了喵～",
