嘿咻~ 我厉害吧~

--- a/common/src/main/resources/assets/toneko/lang/zh_cn.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_cn.json
@@ -69,6 +69,8 @@
   "entity.toneko.crystal_neko.ded": "Crystal_Neko",
   "entity.toneko.ghost_neko": "幽灵猫娘",
   "entity.toneko.ghost_neko.des": "幽灵形态的猫娘，无视重力，可以穿墙与飞行，但可以与生物交互",
+  "entity.toneko.fighting_neko": "武备猫娘",
+  "entity.toneko.fighting_neko.des": "拥有战斗能力的猫娘，虽然有时候会有点笨笨的",
   "gui.back.des": "不用解释你也知道是什么意思叭",
   "gui.toneko.roulette.option.close": "关闭",
   "gui.toneko.roulette.option.get_down": "趴下",
@@ -81,6 +83,10 @@
   "gui.toneko.roulette.tip": "使用鼠标滚轮或键盘方向键来选择，按下鼠标左键或空格键来确定",
   "item.minecraft.milk_bucket.source": "§r§d由%s生产",
   "item.toneko.adventurer_neko_spawn_egg": "冒险家猫娘生成",
+  "item.toneko.ammo.use_with_bazooka": "§a要配合火箭筒使用喵",
+  "item.toneko.lightning_bomb": "闪电弹",
+  "item.toneko.explosive_bomb": "爆炸弹",
+  "item.toneko.fighting_neko_spawn_egg": "武备猫娘生成",
   "item.toneko.catnip": "猫薄荷",
   "item.toneko.catnip_sandwich": "猫薄荷三明治",
   "item.toneko.catnip_seed": "猫薄荷种子",
