哒哒哒重构

--- a/common/src/main/resources/assets/toneko/lang/en_us.json
+++ b/common/src/main/resources/assets/toneko/lang/en_us.json
@@ -14,11 +14,11 @@
   "attribute.name.neko.degree": "Neko Degree",
   "attribute.name.neko.max_energy": "Max Neko Energy",
   "block.toneko.catnip": "Catnip",
+  "command.neko.effect.not_enough_energy": "§cYour Neko Energy is not enough",
   "command.neko.help": "§b/neko getHelp(These commands only for neko):\n§a/neko jump §bJump higher!\n§a/neko vision §bDo you want to see clearly as a neko at night?\n§a/neko speed §bToo quickly(>_<)\n§a/neko lie §bLie down and rest for a while\n§a/neko nickname <nickname> §bSet a cute nickname\n§a/neko level §bShow your neko level\n§a/neko lore <lore> §bSet a cute lore for your item in hand.",
   "command.neko.level.success": "§aYou neko level is %f",
   "command.neko.lore.no_item": "§cI can find air from your hand.",
   "command.neko.nickname.success": "§aYour nickname is %s §a now",
-  "command.neko.effect.not_enough_energy": "§cYour Neko Energy is not enough",
   "command.neko.not_neko": "§cYou are not a neko",
   "command.quirk.add": "§aAdd quirk %s §a successful",
   "command.quirk.already_quirk": "§cThis quirk has already existed",
@@ -67,6 +67,8 @@
   "entity.toneko.adventurer_neko.des": "A neko who loves adventure",
   "entity.toneko.crystal_neko": "Crystal_Neko",
   "entity.toneko.crystal_neko.ded": "Crystal_Neko",
+  "entity.toneko.fighting_neko": "Fighting Neko",
+  "entity.toneko.fighting_neko.des": "A neko who can fight with enemy,although it is seems baka sometimes.",
   "entity.toneko.ghost_neko": "Ghost neko",
   "entity.toneko.ghost_neko.des": "A neko in ghost form, ignoring gravity, can pass through walls and fly, but can interact with creatures",
   "gui.back.des": "I guess you know the meaning",
@@ -81,12 +83,23 @@
   "gui.toneko.roulette.tip": "Use the mouse wheel or keyboard arrow keys to select, press the left mouse button or space bar to confirm",
   "item.minecraft.milk_bucket.source": "§r§dProduced by %s",
   "item.toneko.adventurer_neko_spawn_egg": "Adventurer Neko Spawn",
+  "item.toneko.ammo.use_with_bazooka": "§aUse with Bazooka",
+  "item.toneko.bazooka": "Bazooka",
+  "item.toneko.bazooka.no_ammo_selected": "§cNo ammunition selected",
+  "item.toneko.bazooka.out_of_ammo": "§cOut of ammunition",
+  "item.toneko.bazooka.reloaded": "§aAmmunition reloaded!",
+  "item.toneko.bazooka.tip.ammo_type": "Selected ammunition：",
+  "item.toneko.bazooka.tip.no_ammo": "No ammunition",
+  "item.toneko.bazooka.tip.reload": "§bPress Shift+Right Click to reload",
   "item.toneko.catnip": "Catnip",
   "item.toneko.catnip_sandwich": "Catnip Sandwich",
   "item.toneko.catnip_seed": "Catnip Seed",
+  "item.toneko.explosive_bomb": "Explosive Bomb",
+  "item.toneko.fighting_neko_spawn_egg": "Fighting Neko Spawn",
   "item.toneko.furry_bohe": "Furry Bohe",
   "item.toneko.furry_bohe.info": "Also try Furry Bohe",
   "item.toneko.ghost_neko_spawn_egg": "Ghost Neko Spawn",
+  "item.toneko.lightning_bomb": "Lightning Bomb",
   "item.toneko.music_disc_kawaii": "Music Disc",
   "item.toneko.music_disc_never_gonna_give_you_up": "Music Disc",
   "item.toneko.neko_collector": "Neko collector",
@@ -94,13 +107,6 @@
   "item.toneko.neko_ears": "Neko ears",
   "item.toneko.neko_potion.effect.empty": "Neko Potion",
   "item.toneko.neko_tail": "Neko Tail",
-  "item.toneko.bazooka": "Bazooka",
-  "item.toneko.bazooka.reloaded": "§aAmmunition reloaded!",
-  "item.toneko.bazooka.no_ammo_selected": "§cNo ammunition selected",
-  "item.toneko.bazooka.out_of_ammo": "§cOut of ammunition",
-  "item.toneko.bazooka.tip.ammo_type": "Selected ammunition：",
-  "item.toneko.bazooka.tip.no_ammo": "No ammunition",
-  "item.toneko.bazooka.tip.reload": "§bPress Shift+Right Click to reload",
   "itemGroup.toneko": "Neko",
   "key.toneko.get_down": "get down",
   "key.toneko.jump": "Get jump boost",
