--- a/common/src/main/resources/assets/toneko/lang/zh_tw.json
+++ b/common/src/main/resources/assets/toneko/lang/zh_tw.json
@@ -14,11 +14,11 @@
   "attribute.name.neko.degree": "貓貓等級",
   "attribute.name.neko.max_energy": "最大猫猫能量",
   "block.toneko.catnip": "猫薄荷",
+  "command.neko.effect.not_enough_energy": "§c能量不足啦",
   "command.neko.help": "§b/neko 幫助（注意喔，這些指令都是貓貓專有的喔）：\n§a/neko jump §b跳得更高！\n§a/neko vision §b想和貓貓一樣在夜晚看得更清楚嗎\n§a/neko speed §b太快啦 (>_<)\n§a/neko lie §b躺下來休息會吧\n§a/neko nickname <暱稱> §b設定一個可愛的暱稱吧\n§a/neko level §b看看你的貓貓等級\n§a/neko lore <描述> §b給你手中的物品設定一個可愛的描述吧",
   "command.neko.level.success": "§a你的貓貓等級是 %f §a啦",
   "command.neko.lore.no_item": "§c你手上什麼都沒有耶",
   "command.neko.nickname.success": "§a現在你的暱稱是 %s §a啦",
-  "command.neko.effect.not_enough_energy": "§c能量不足啦",
   "command.neko.not_neko": "§c你並不是一隻貓貓喔",
   "command.quirk.add": "§a成功新增了 %s §a性癖了喵",
   "command.quirk.already_quirk": "§c這個性癖已經存在了喵～",
@@ -67,6 +67,8 @@
   "entity.toneko.adventurer_neko.des": "热爱冒险的猫娘",
   "entity.toneko.crystal_neko": "Crystal_Neko",
   "entity.toneko.crystal_neko.ded": "Crystal_Neko",
+  "entity.toneko.fighting_neko": "武备猫娘",
+  "entity.toneko.fighting_neko.des": "拥有战斗能力的猫娘，虽然有时候会有点笨笨的",
   "entity.toneko.ghost_neko": "幽灵猫娘",
   "entity.toneko.ghost_neko.des": "幽灵形态的猫娘，无视重力，可以穿墙与飞行，但可以与生物交互",
   "gui.back.des": "不用解释你也知道是什么意思叭",
@@ -81,12 +83,23 @@
   "gui.toneko.roulette.tip": "使用鼠标滚轮或键盘方向键来选择，按下鼠标左键或空格键来确定",
   "item.minecraft.milk_bucket.source": "§r§d由%s生产",
   "item.toneko.adventurer_neko_spawn_egg": "冒險家貓娘生成",
+  "item.toneko.ammo.use_with_bazooka": "§a要配合火箭筒使用喵",
+  "item.toneko.bazooka": "火箭炮",
+  "item.toneko.bazooka.no_ammo_selected": "§c未设置弹药",
+  "item.toneko.bazooka.out_of_ammo": "§c弹药已耗尽",
+  "item.toneko.bazooka.reloaded": "§a弹药填装成功",
+  "item.toneko.bazooka.tip.ammo_type": "当前弹药：",
+  "item.toneko.bazooka.tip.no_ammo": "无弹药",
+  "item.toneko.bazooka.tip.reload": "§b按下Shift+右键自动填装",
   "item.toneko.catnip": "猫薄荷",
   "item.toneko.catnip_sandwich": "猫薄荷三明治",
   "item.toneko.catnip_seed": "猫薄荷种子",
+  "item.toneko.explosive_bomb": "爆炸弹",
+  "item.toneko.fighting_neko_spawn_egg": "武备猫娘生成",
   "item.toneko.furry_bohe": "獸薄荷",
   "item.toneko.furry_bohe.info": "Also try Furry Bohe",
   "item.toneko.ghost_neko_spawn_egg": "幽灵猫娘生成",
+  "item.toneko.lightning_bomb": "闪电弹",
   "item.toneko.music_disc_kawaii": "音乐唱片",
   "item.toneko.music_disc_never_gonna_give_you_up": "音乐唱片",
   "item.toneko.neko_collector": "貓貓吸收器",
@@ -94,13 +107,6 @@
   "item.toneko.neko_ears": "貓耳朵",
   "item.toneko.neko_potion.effect.empty": "貓娘藥水",
   "item.toneko.neko_tail": "貓尾巴",
-  "item.toneko.bazooka": "火箭炮",
-  "item.toneko.bazooka.reloaded": "§a弹药填装成功",
-  "item.toneko.bazooka.no_ammo_selected": "§c未设置弹药",
-  "item.toneko.bazooka.out_of_ammo": "§c弹药已耗尽",
-  "item.toneko.bazooka.tip.ammo_type": "当前弹药：",
-  "item.toneko.bazooka.tip.no_ammo": "无弹药",
-  "item.toneko.bazooka.tip.reload": "§b按下Shift+右键自动填装",
   "itemGroup.toneko": "貓貓",
   "key.toneko.get_down": "趴下",
   "key.toneko.jump": "获取跳跃提升",
